2010-02-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAttributedString.m: minor cosmetic change
	* Source/GSAttributedString.m: Re-introduce proxy for -string
	and comment to try to avoid it being accidentally removed again.
	* Source/GSString.m: Fixups to work properly with string proxies.
	* Source/NSException.m: Re-instate correct behavior and make the
	comment about it more emphatic.

2010-02-08 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* Source/NSException.m
	* Removed redundant call to _NSFoundationUncaughtExceptionHandler
	and added else blocks to allow a set uncaught exception handler
	to NOT exit if capable of recovering.

2010-02-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSOperation.h:
	* Source/NSOperation.m:
	Complete implementation of NSOperationQueue (OSX 10.6 apart from the
	methods using objc2 blocks).

2010-02-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSOperation.h:
	* Source/NSOperation.m:
	Partial implementation of NSOperationQueue (OSX Leopard functionality
	plus a little of Snow Leopard).

2010-02-05 Riccardo Mottola <rmottola@users.sf.net>

	* Headers/Additions/GNUstepBase/GSIMap.h: fixed c99-ism
	* Headers/Additions/GNUstepBase/GSBlocks.h : provide gcc 2.95
	variadic macro
	
2010-02-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSOperation.h:
	* Source/NSOperation.m:
	Implement and document the NSOperation class.
	As OSX 10.6 minus the objc2 specific 'block' methods.

2010-02-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLock.m: cleanup indentation etc, and apply fix suggested
	by David Ayers

2010-02-04 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* Source/NSLock.m: 
	lockWhenCondition:beforeDate: 
	  Switched to use timeIntervalSince1970. 
	  added a loop to lockWhenCondition since pthread_cond_timedwait can return 
	  to delay expiring. Hold the lock on a delayed acquire (and YES return).
	tryLockWhenCondition: 