@@ -63,102 +63,6 @@
 
 static	NSDictionary	*blank;
 
-@interface GSAttributedStringProxy : NSProxy
-{
-  NSString	*string;
-}
-- (id) _initWithString: (NSString*)s;
-@end
-
-@implementation	GSAttributedStringProxy
-
-static Class NSObjectClass = nil;
-static Class NSStringClass = nil;
-
-+ (void) initialize
-{
-  NSObjectClass = [NSObject class];
-  NSStringClass = [NSString class];
-}
-
-- (Class) class
-{
-  return NSStringClass;
-}
-
-- (void) dealloc
-{
-  [string release];
-  [super dealloc];
-}
-
-- (void) forwardInvocation: (NSInvocation*)anInvocation
-{
-  SEL	aSel = [anInvocation selector];
-
-  if (YES == [NSStringClass instancesRespondToSelector: aSel])
-    {
-      [anInvocation invokeWithTarget: string];
-    }
-  else
-    {
-      [NSException raise: NSGenericException
-	          format: @"NSString(instance) does not recognize %s",
-	aSel ? GSNameFromSelector(aSel) : "(null)"];
-    }
-}
-
-- (NSUInteger) hash
-{
-  return [string hash];
-}
-
-- (id) _initWithString: (NSString*)s
-{
-  string = [s retain];
-  return self;
-}
-
-- (BOOL) isEqual: (id)other
-{
-  return [string isEqual: other];
-}
-
-- (BOOL) isMemberOfClass: (Class)c
-{
-  return (c == NSStringClass) ? YES : NO;
-}
-
-- (BOOL) isKindOfClass: (Class)c
-{
-  return (c == NSStringClass || c == NSObjectClass) ? YES : NO;
-}
-
-- (NSMethodSignature*) methodSignatureForSelector: (SEL)aSelector
-{
-  NSMethodSignature	*sig;
-
-  if (YES == [NSStringClass instancesRespondToSelector: aSelector])
-    {
-      sig = [string methodSignatureForSelector: aSelector];
-    }
-  else
-    {
-      sig = [super methodSignatureForSelector: aSelector];
-    }
-  return sig;
-}
-
-- (BOOL) respondsToSelector: (SEL)aSelector
-{
-  if (YES == [NSStringClass instancesRespondToSelector: aSelector])
-    {
-      return YES;
-    }
-  return [super respondsToSelector: aSelector];
-}
-
-@end
 
 @interface GSAttributedString : NSAttributedString
 {
@@ -178,7 +82,7 @@ static Class NSStringClass = nil;
 {
   NSMutableString	*_textChars;
   NSMutableArray	*_infoArray;
-  NSString		*_proxy;
+  NSString		*_textProxy;
 }
 
 - (id) initWithString: (NSString*)aString
@@ -694,11 +598,11 @@ SANITY();
   /* NB. This method is SUPPOSED to return a proxy to the mutable string!
    * This is a performance feature documented ifor OSX.
    */
-  if (_proxy == nil)
+  if (_textProxy == nil)
     {
-      _proxy = [[GSAttributedStringProxy alloc] _initWithString: _textChars];
+      _textProxy = [[_textChars immutableProxy] retain];
     }
-  return _proxy;
+  return _textProxy;
 }
 
 - (NSDictionary*) attributesAtIndex: (unsigned)index
@@ -988,7 +892,7 @@ SANITY();
 
 - (void) dealloc
 {
-  [_proxy release];
+  [_textProxy release];
   RELEASE(_textChars);
   RELEASE(_infoArray);
   [super dealloc];
